@@ -289,10 +289,11 @@ rubia-holmium-craptalysis=Passing the ore through a craptalytic converter offend
 craptonite-productivity=Your naming privileges are hereby revoked. We're calling this one "Rubia Productivity", and you're going to like it.
 rubia-braking-force-8=Your trains are weak, and I have a need for speed.
 
-rubia-biofusion-science-pack=Rubia's final challenge: Making an unholy concoction with the DNA of lifeforms from various planets. Optional. WARNING: NOT TESTED. PROCEED AT YOUR OWN RISK!
+rubia-biofusion-science-pack=Rubia's final challenge: Making an unholy concoction with the DNA of lifeforms from various planets. Optional.
 rubia-biofusion-science-pack-removed=Removing Gleba or surface restrictions from your playthrough removes access to Rubia postgame content. Sucks to be you.\nCurrent causes: __1__
 rubia-nutrients-from-sludge=Learn to filter and process the useful organics from bacterial sludge for convenient biofuel on Rubia.
 rubia-nutrient-productivity=Make nutrients more efficiently.
+rubia-biochamber-productivity-bonus=Your vast experience working with biologicals allows you to use the biochamber more efficiently.
 
 ;Craptonite tools
 rubia-craptonite-boots=Craptonite-reinforced boots with holmium alloy trim and soles to aid faster running. Feel the craptonite insoles with every step.
