@@ -2,6 +2,7 @@
 Version: 0.69.64
 Date: ????
   Changes:
+    - Removed warning from Biofusion science.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.63
 Date: 2025-06-17
